--- a/style.css
+++ b/style.css
@@ -27,9 +27,10 @@ header{
 }
 
 .book{
-    width:10rem;
+    width:15rem;
     padding: 5px;
     display: flex;
+    gap: 1rem;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
@@ -38,13 +39,22 @@ header{
     flex: 0 0 auto;
 }
 
+.book>*{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
 .read-complete{
     background-color: green;
+    color: white;
+    width:70%;
 }
 
 .read-not{
     background-color: red;
-    width: 100%;
+    width: 70%;
 }
 
 .add-book-button::after{
@@ -57,8 +67,36 @@ header{
     padding: 5px 10px;
 }
 
-/* .add-book-button{
-    display: flex;
-} */
+.add-book-button{
+    width: max-content;
+}
 
+dialog[open]{
+    border: 2px solid black;
+    border-radius: 5px;
+    padding: 0px;
+    background-color: sandybrown;
+    display: flex;
+}
+
+dialog form{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    font-size: 3rem;
+    padding: 2rem;
+}
+
+.remove-button{
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 1.5rem;
+}
+
+.remove-button:active{
+    background-color: darkred;
+}
 
